# keygen_music

./: .gitignore  CMakeLists.txt  README.md  keygen_music.cpp
pico_audio_i2s/: audio.cpp  audio_i2s.c
pico_audio_i2s/include/pico/: audio.h  audio_i2s.h  sample_conversion.h
tunes/: crack.h  ghidapop.h  unreal.h
